# MakiseSDLTest

./: .gitignore  .gitmodules  CMakeLists.txt  GPATH  GRTAGS  GTAGS  makise_config.h  project.el  readme.md
MakiseTests/: tests.c  tests.h  tests_buttons.c  tests_container.c  tests_hello.c  tests_margin.c  tests_position.c  tests_selector.c  tests_slider.c  tests_slist.c  tests_styles.c  tests_styles.h  tests_styletest.c  tests_tabs.c
docs/: habrahabr.md
src/: list_test.c  list_test.h  main.c
